@@ -1,4 +1,4 @@
-2008-10-28  Don Porter  <dgp@users.sourceforge.net>
+2008-10-09  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tkListbox.c:	Make literal return values consistent with
 	those generated by Tcl_PrintDouble().
@@ -7,6 +7,8 @@
 	* tests/entry.test:	2008-10-05 commit.
 	* tests/listbox.test:
 	* tests/scrollbar.test:
+	* tests/spinbox.test:
+	* tests/textDisp.test:
 
 	* generic/tkEntry.c:	Fix missing space constructing the scroll
 	command.
